Chess: :memo: Add utf8 example keycode

--- a/src/chess.tex
+++ b/src/chess.tex
@@ -101,8 +101,8 @@ var conversion = [];
 var promotionIndex = 0;
 
 % Game Data
-% The symbol array, each piece gets one symbol. Since the utf8 chess pieces do not work
-% default asccii letters are used
+% The symbol array, each piece gets one symbol.
+% Since the utf8 chess pieces do not work default asccii letters are used. (0x2654 ...)
 const PIECE_SYMBOLS = new Array(
     "K", "Q", "B", "N", "R", "P"
 );
