GOL: :bug: Fix fill random does not clear board

--- a/src/gameoflife.tex
+++ b/src/gameoflife.tex
@@ -461,6 +461,9 @@ function fillRandom() {
                 } else {
                     complField2[y][x] = ALIVE;
                 }
+            } else {
+                complField1[y][x] = DEAD;
+                complField2[y][x] = DEAD;
             }
         }
     }
